# finsight-py

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  conftest.py  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  uv.toml
apps/api-service/: Dockerfile  pyproject.toml
apps/api-service/alembic/: env.py
apps/api-service/alembic/versions/: 20260404_0000_create_006_core_tables.py  20260404_0001_add_alert_condition_type.py  20260404_0002_create_knowledge_entries.py  20260405_0003_watchlist_metadata_and_alert_acknowledged_at.py  20260405_0004_create_auth_tables.py  20260406_0005_create_debug_reader_role.py
apps/api-service/src/api/: main.py
apps/api-service/src/api/agents/: __init__.py  analyst_agent.prompt.py  analyst_agent.py  base.py  bookkeeper_agent.prompt.py  bookkeeper_agent.py  manager_agent.prompt.py  manager_agent.py  pattern_agent.prompt.py  pattern_agent.py  reporter_agent.prompt.py  reporter_agent.py  researcher_agent.prompt.py  researcher_agent.py  stub_agent.prompt.py  stub_agent.py  watchdog_agent.prompt.py  watchdog_agent.py
apps/api-service/src/api/db/: base.py
apps/api-service/src/api/graphs/: __init__.py  nodes.py  state.py  supervisor.py
apps/api-service/src/api/lib/: auth.py  config.py  db.py  logging.py  pricing.py  queues.py  redis.py  tracing.py
apps/api-service/src/api/mcp/: client.py
apps/api-service/src/api/routes/: alerts.py  auth.py  dashboard.py  dashboard_auth.py  health.py  knowledge.py  missions.py  operators.py  watchlist.py
apps/api-service/src/api/seeds/: __init__.py  alerts.py  constants.py  knowledge.py  missions.py  operators.py  seed.py  watchlist.py
apps/api-service/src/api/workers/: __init__.py  alert_worker.py  brief_worker.py  mission_worker.py  screener_worker.py  watchdog_worker.py
apps/api-service/tests/: conftest.py  test_config.py  test_script_invariants.py  test_scripts_runtime.py
apps/api-service/tests/agents/: __init__.py  conftest.py  test_analyst.py  test_base.py  test_bookkeeper.py  test_pattern.py  test_reporter.py  test_researcher.py  test_watchdog.py
apps/api-service/tests/db/: conftest.py
apps/api-service/tests/mcp/: test_client.py
apps/api-service/tests/orchestration/: conftest.py  test_alert_worker.py  test_manager.py  test_mission_worker.py  test_queues.py  test_supervisor.py
apps/api-service/tests/routes/: conftest.py  test_auth.py  test_auth_runtime_wiring.py  test_dashboard_feature_routes.py  test_health.py  test_missions.py  test_operators.py
apps/api-service/tests/seeds/: test_seed.py
apps/dashboard/: Dockerfile  index.html  package.json  pyproject.toml  tsconfig.json  vite.config.ts
apps/dashboard/src/__tests__/: accessibility.test.tsx  action-contracts.test.ts  admin-actions.test.tsx  agent-floor.test.tsx  auth-failure.test.tsx  auth-gate.test.tsx  auth-session.test.tsx  dashboard-fidelity.test.tsx  foundation.test.ts  health-panel.test.tsx  mission-log.test.tsx  mission-pipeline.test.tsx  ops-panels.test.tsx  privacy.test.tsx  setup.ts  spend-panel.test.tsx  status-polling.test.tsx  status-resilience.test.tsx
apps/dashboard/src/app/: App.tsx  router.tsx  styles.css
apps/dashboard/src/auth/: AuthProvider.tsx  LoginPage.tsx  session.ts
apps/dashboard/src/dashboard/: AdminActions.tsx  AgentFloor.tsx  DashboardPage.tsx  HealthPanel.tsx  MissionLog.tsx  MissionPipeline.tsx  SpendPanel.tsx  api_client.py  auth.py  config.py  formatters.ts  main.py  useActionFeedback.ts
apps/dashboard/src/dashboard/assets/: styles.css
apps/dashboard/src/dashboard/components/: __init__.py  agent_run_panel.py  alert_badge.py  health_indicator.py  kb_entry_card.py  mission_card.py  watchlist_form.py
apps/dashboard/src/dashboard/pages/: __init__.py  health.py  kb.py  missions.py  overview.py  (+1 more)
apps/dashboard/src/status/: status-client.ts  status-types.ts  useAdminStatus.ts
apps/dashboard/tests/: conftest.py  test_callbacks.py
apps/mcp-servers/debug/: Dockerfile  pyproject.toml
apps/mcp-servers/debug/tests/: __init__.py  test_agent_tools.py  test_auth.py  test_db_tools.py  test_infra_tools.py  test_redis_tools.py  test_scrub.py
apps/mcp-servers/market-data/: Dockerfile  pyproject.toml
apps/mcp-servers/market-data/tests/: test_market_tools.py
apps/telegram-bot/: Dockerfile  package.json  pyproject.toml  tsconfig.json
apps/telegram-bot/src/: api-client.ts  auth.ts  bot.ts  commands.ts  config.ts  formatter.ts  handler.ts  logger.ts  push.ts  rate-limit.ts  types.ts  user-chat-link.ts
apps/telegram-bot/src/__tests__/: command-routing.test.ts  commands.test.ts  formatter.chunking.test.ts  formatter.labels.test.ts  foundation.test.ts  handler.auth.test.ts  handler.chat-link.test.ts  handler.errors.test.ts  handler.freetext.test.ts  handler.logging.test.ts  handler.rate-limit.test.ts  handler.validation.test.ts  performance.ack-latency.test.ts  privacy.test.ts  push.logging.test.ts  push.test.ts  rate-limit.test.ts  startup.test.ts
apps/telegram-bot/src/telegram_bot/: __init__.py  api_client.py  auth.py  config.py  main.py  message_utils.py  notifier.py  runtime.py
apps/telegram-bot/tests/: conftest.py  test_auth.py  test_commands.py  test_message_utils.py  test_messages.py  test_notifier.py  test_voice.py
(+538 files in other folders)
