[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsight-api"
version = "0.1.0"
description = "FinSight FastAPI application"
requires-python = ">=3.13"
dependencies = [
  "finsight-shared",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "structlog>=24.1",
  "alembic>=1.13",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "croniter>=1.4",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
