[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsight-api"
version = "0.1.0"
description = "FinSight FastAPI application"
requires-python = ">=3.13"
dependencies = [
  "finsight-shared",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "structlog>=24.1",
  "alembic>=1.13",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "pgvector>=0.3",
  "redis[hiredis]>=5.0",
  "aiosqlite>=0.20",
  "fakeredis>=2.23",
  "croniter>=1.4",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "bcrypt<4.1",
  "slowapi>=0.1",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "langchain-core>=0.3",
  "langchain-anthropic>=0.3",
  "langchain-openai>=0.3",
  "langsmith>=0.3",
  "celery[redis]>=5.3",
  "langgraph>=0.2,<1.0",
  "langgraph-checkpoint-postgres>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
